cats/01_namespace.yaml
---
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cats
  labels:
    shared-gateway-access: "true"
