cats/service.yaml
---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  name: website
  namespace: cats
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: website
  type: ClusterIP
