cats/httproute.yaml
---
# httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: cats-website
  namespace: cats
  labels:
    gateway: external-http
spec:
  parentRefs:
  - name: external-http
    namespace: admin
  hostnames:
  - "next24.msparr.com"
  rules:
  - matches:
    - path:
        value: /cats
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: website
      port: 80
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: catsrule-website
  namespace: cats
  labels:
    gateway: external-http
spec:
  parentRefs:
  - name: external-http
    namespace: admin
  hostnames:
  - "catsrule.msparr.com"
  rules:
  - backendRefs:
    - name: website
      port: 80
